force-app/main/default/objects/Catering__c/Catering__c.object-meta.xml
<CustomObject>
    <label>Catering</label>
    <nameField>
        <displayFormat>CN-{00000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catering</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>