force-app/main/default/objects/Catering__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Catering</relationshipLabel>
    <relationshipName>Catering</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>