force-app/main/default/objects/Catering__c/fields/Category_CSD__c.field-meta.xml
<CustomField>
    <fullName>Category_CSD__c</fullName>
    <label>Category(CSD)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Soup</fullName>
            </value>
            <value>
                <fullName>Salad</fullName>
            </value>
            <value>
                <fullName>Cheese</fullName>
            </value>
            <value>
                <fullName>Fruits</fullName>
            </value>
            <value>
                <fullName>Dessert</fullName>
            </value>
            <value>
                <fullName>Dry Goods</fullName>
            </value>
            <value>
                <fullName>Frozen Food</fullName>
            </value>
            <value>
                <fullName>Instant Food</fullName>
            </value>
            <value>
                <fullName>Seasoning &amp; Sauce</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
            <value>
                <fullName>Spirits</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Juice</fullName>
            </value>
            <value>
                <fullName>Tea</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Soda</fullName>
            </value>
            <value>
                <fullName>Cart</fullName>
            </value>
            <value>
                <fullName>Standard Units &amp; Others</fullName>
            </value>
            <value>
                <fullName>Tray</fullName>
            </value>
            <value>
                <fullName>Crew Use</fullName>
            </value>
            <value>
                <fullName>Meal Related Equipment</fullName>
            </value>
            <value>
                <fullName>Rack and Drawer</fullName>
            </value>
            <value>
                <fullName>Bags</fullName>
            </value>
            <value>
                <fullName>DFS Bags</fullName>
            </value>
            <value>
                <fullName>Other Linens</fullName>
            </value>
            <value>
                <fullName>Blankets</fullName>
            </value>
            <value>
                <fullName>Pillows</fullName>
            </value>
            <value>
                <fullName>Mattress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>