force-app/main/default/objects/Catering__c/fields/Delivery_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Feedback__c</fullName>
    <label>Delivery Feedback</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attitude/Manner</fullName>
            </value>
            <value>
                <fullName>Loading Quality</fullName>
            </value>
            <value>
                <fullName>Loading Uplift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>