force-app/main/default/objects/Catering__c/fields/Delivery_Feedback_Comments__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Feedback_Comments__c</fullName>
    <label>Delivery Feedback Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>