force-app/main/default/objects/Catering__c/fields/Has_Record_on_PIL__c.field-meta.xml
<CustomField>
    <fullName>Has_Record_on_PIL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Record on PIL?</label>
    <type>Checkbox</type>
</CustomField>