force-app/main/default/objects/Catering__c/fields/IEML_Meal_Code__c.field-meta.xml
<CustomField>
    <fullName>IEML_Meal_Code__c</fullName>
    <label>IEML Meal Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BF</fullName>
            </value>
            <value>
                <fullName>LM</fullName>
            </value>
            <value>
                <fullName>PK</fullName>
            </value>
            <value>
                <fullName>CK</fullName>
            </value>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>GS</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>LB</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>EG</fullName>
            </value>
            <value>
                <fullName>FP</fullName>
                <isActive>false</isActive>
                <label>FP</label>
            </value>
            <value>
                <fullName>VG</fullName>
                <isActive>false</isActive>
                <label>VG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>