force-app/main/default/objects/Catering__c/fields/SPML_IEML_Meal_Type__c.field-meta.xml
<CustomField>
    <fullName>SPML_IEML_Meal_Type__c</fullName>
    <label>SPML/IEML Meal Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VOML</fullName>
            </value>
            <value>
                <fullName>VLML</fullName>
            </value>
            <value>
                <fullName>AVML</fullName>
            </value>
            <value>
                <fullName>RVML</fullName>
            </value>
            <value>
                <fullName>VGML</fullName>
            </value>
            <value>
                <fullName>VJML</fullName>
            </value>
            <value>
                <fullName>KSML</fullName>
            </value>
            <value>
                <fullName>MOML</fullName>
            </value>
            <value>
                <fullName>HNML</fullName>
            </value>
            <value>
                <fullName>BBML</fullName>
            </value>
            <value>
                <fullName>PWML</fullName>
            </value>
            <value>
                <fullName>CHML</fullName>
            </value>
            <value>
                <fullName>BLML</fullName>
            </value>
            <value>
                <fullName>DBML</fullName>
            </value>
            <value>
                <fullName>GFML</fullName>
            </value>
            <value>
                <fullName>LCML</fullName>
            </value>
            <value>
                <fullName>LFML</fullName>
            </value>
            <value>
                <fullName>LSML</fullName>
            </value>
            <value>
                <fullName>NLML</fullName>
            </value>
            <value>
                <fullName>SFML</fullName>
            </value>
            <value>
                <fullName>FPML</fullName>
            </value>
            <value>
                <fullName>AFML</fullName>
            </value>
            <value>
                <fullName>SPML</fullName>
            </value>
            <value>
                <fullName>SEML</fullName>
            </value>
            <value>
                <fullName>Asian Main(MA)</fullName>
                <isActive>false</isActive>
                <label>Asian Main(MA)</label>
            </value>
            <value>
                <fullName>International Main(MI)</fullName>
                <isActive>false</isActive>
                <label>International Main(MI)</label>
            </value>
            <value>
                <fullName>Salad(SA)</fullName>
                <isActive>false</isActive>
                <label>Salad(SA)</label>
            </value>
            <value>
                <fullName>Soup(SU)</fullName>
                <isActive>false</isActive>
                <label>Soup(SU)</label>
            </value>
            <value>
                <fullName>Starter(ST)</fullName>
                <isActive>false</isActive>
                <label>Starter(ST)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>