force-app/main/default/objects/Catering__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meal</fullName>
            </value>
            <value>
                <fullName>Tableware</fullName>
            </value>
            <value>
                <fullName>Catering Linens</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Alcohol</fullName>
                <isActive>false</isActive>
                <label>Alcohol</label>
            </value>
            <value>
                <fullName>Beverage</fullName>
                <isActive>false</isActive>
                <label>Beverage</label>
            </value>
            <value>
                <fullName>Dry Good</fullName>
                <isActive>false</isActive>
                <label>Dry Good</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>